--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,10 @@ source:
 
 build:
   number: 0
+  features:
+    - vc9   # [win and py27]
+    - vc10  # [win and py34]
+    - vc14  # [win and py35]
 
 requirements:
   build:
@@ -26,6 +30,11 @@ requirements:
     - cmake
 
 test:
+  requires:
+    - python 2.7.*  # [win and py27]
+    - python 3.4.*  # [win and py34]
+    - python 3.5.*  # [win and py35]
+
   commands:
     - test -f ${PREFIX}/lib/libgtest.a  # [unix]
     - test -f ${PREFIX}/lib/libgtest_main.a  # [unix]
