Build only with one python version in unix

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ source:
 
 build:
   number: 0
+  skip: True  # [unix and not py35]
   features:
     - vc9   # [win and py27]
     - vc10  # [win and py34]
