--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,22 +42,22 @@ test:
     - test -f ${PREFIX}/lib/libgtest_main.a                 # [unix]
     - test -f ${PREFIX}/lib/libgtest_dll.{{ libext }}       # [unix]
     - test -d ${PREFIX}/include/gtest                       # [unix]
-    - if not exist %LIBRARY_BIN%\gtest.lib exit 1           # [win]
-    - if not exist %LIBRARY_BIN%\gtestd.lib exit 1          # [win]
-    - if not exist %LIBRARY_BIN%\gtest_main.lib exit 1      # [win]
-    - if not exist %LIBRARY_BIN%\gtest_maind.lib exit 1     # [win]
+    - if not exist %LIBRARY_LIB%\gtest.lib exit 1           # [win]
+    - if not exist %LIBRARY_LIB%\gtestd.lib exit 1          # [win]
+    - if not exist %LIBRARY_LIB%\gtest_main.lib exit 1      # [win]
+    - if not exist %LIBRARY_LIB%\gtest_maind.lib exit 1     # [win]
     - if not exist %LIBRARY_BIN%\gtest_dll.dll exit 1       # [win]
     - if not exist %LIBRARY_BIN%\gtest_dlld.dll exit 1      # [win]
-    - if not exist %LIBRARY_BIN%\gtest_dll.lib exit 1       # [win]
-    - if not exist %LIBRARY_BIN%\gtest_dlld.lib exit 1      # [win]
-    - if not exist %LIBRARY_BIN%\gtest-md.lib exit 1        # [win]
-    - if not exist %LIBRARY_BIN%\gtest-mdd.lib exit 1       # [win]
-    - if not exist %LIBRARY_BIN%\gtest_main-md.lib exit 1   # [win]
-    - if not exist %LIBRARY_BIN%\gtest_main-mdd.lib exit 1  # [win]
+    - if not exist %LIBRARY_LIB%\gtest_dll.lib exit 1       # [win]
+    - if not exist %LIBRARY_LIB%\gtest_dlld.lib exit 1      # [win]
+    - if not exist %LIBRARY_LIB%\gtest-md.lib exit 1        # [win]
+    - if not exist %LIBRARY_LIB%\gtest-mdd.lib exit 1       # [win]
+    - if not exist %LIBRARY_LIB%\gtest_main-md.lib exit 1   # [win]
+    - if not exist %LIBRARY_LIB%\gtest_main-mdd.lib exit 1  # [win]
     - if not exist %LIBRARY_BIN%\gtest_dll-md.dll exit 1    # [win]
     - if not exist %LIBRARY_BIN%\gtest_dll-mdd.dll exit 1   # [win]
-    - if not exist %LIBRARY_BIN%\gtest_dll-md.lib exit 1    # [win]
-    - if not exist %LIBRARY_BIN%\gtest_dll-mdd.lib exit 1   # [win]
+    - if not exist %LIBRARY_LIB%\gtest_dll-md.lib exit 1    # [win]
+    - if not exist %LIBRARY_LIB%\gtest_dll-mdd.lib exit 1   # [win]
     - if not exist %LIBRARY_INC%\gtest exit 1               # [win]
 
 about:
