make recipe cross-compile capable

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,8 +26,9 @@ build:
 
 requirements:
   build:
-    - toolchain
-    - python
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+  host:
     - cmake
 
 test:
