--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,6 @@
 {% set version = "1.8.0" %}
 {% set sha256 = "58a6f4277ca2bc8565222b3bbd58a177609e9c488e8a72649359ba51450db7d8" %}
 
-{% if linux %}
-    {% set libext = "so" %}
-{% else %}
-    {% set libext = "dylib" %}
-{% endif %}
-
 package:
   name: gtest
   version: {{ version }}
@@ -32,8 +26,9 @@ test:
   commands:
     - test -f ${PREFIX}/lib/libgtest.a                      # [unix]
     - test -f ${PREFIX}/lib/libgtest_main.a                 # [unix]
-    - test -f ${PREFIX}/lib/libgtest_dll.{{ libext }}       # [unix]
     - test -d ${PREFIX}/include/gtest                       # [unix]
+    - test -f ${PREFIX}/lib/libgtest_dll.so                 # [linux]
+    - test -f ${PREFIX}/lib/libgtest_dll.dylib              # [osx]
     - if not exist %LIBRARY_LIB%\gtest.lib exit 1           # [win]
     - if not exist %LIBRARY_LIB%\gtestd.lib exit 1          # [win]
     - if not exist %LIBRARY_LIB%\gtest_main.lib exit 1      # [win]
