--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,6 @@
 {% set version = "1.8.0" %}
 {% set sha256 = "58a6f4277ca2bc8565222b3bbd58a177609e9c488e8a72649359ba51450db7d8" %}
 
-{% if linux %}
-    {% set libext = "so" %}
-{% else %}
-    {% set libext = "dylib" %}
-{% endif %}
 
 package:
   name: gtest
@@ -17,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 5
+  number: 6
 
 requirements:
   build:
@@ -29,7 +24,7 @@ test:
   commands:
     - test -f ${PREFIX}/lib/libgtest.a                      # [unix]
     - test -f ${PREFIX}/lib/libgtest_main.a                 # [unix]
-    - test -f ${PREFIX}/lib/libgtest.{{ libext }}           # [unix]
+    - test -f ${PREFIX}/lib/libgtest${SHLIB_EXT}            # [unix]
     - test -d ${PREFIX}/include/gtest                       # [unix]
     - if not exist %LIBRARY_LIB%\gtest.lib exit 1           # [win]
     - if not exist %LIBRARY_LIB%\gtestd.lib exit 1          # [win]
@@ -61,3 +56,4 @@ extra:
     - SylvainCorlay
     - scopatz
     - wesm
+    - marcelotrevisani
