--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ build:
   number: 0
 
 requirements:
+  host: []  # Empty host dependency section
   build:
     - {{ compiler('cxx') }}
     - python
