update tests to reflect gmock dll naming

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -72,18 +72,18 @@ outputs:
         - if not exist %LIBRARY_LIB%\gmockd.lib exit 1          # [win]
         - if not exist %LIBRARY_LIB%\gmock_main.lib exit 1      # [win]
         - if not exist %LIBRARY_LIB%\gmock_maind.lib exit 1     # [win]
-        - if not exist %LIBRARY_BIN%\gmock_dll.dll exit 1       # [win]
-        - if not exist %LIBRARY_BIN%\gmock_dlld.dll exit 1      # [win]
-        - if not exist %LIBRARY_LIB%\gmock_dll.lib exit 1       # [win]
-        - if not exist %LIBRARY_LIB%\gmock_dlld.lib exit 1      # [win]
+        - if not exist %LIBRARY_BIN%\gmock.dll exit 1           # [win]
+        - if not exist %LIBRARY_BIN%\gmockd.dll exit 1          # [win]
+        - if not exist %LIBRARY_LIB%\gmock.lib exit 1           # [win]
+        - if not exist %LIBRARY_LIB%\gmockd.lib exit 1          # [win]
         - if not exist %LIBRARY_LIB%\gmock-md.lib exit 1        # [win]
         - if not exist %LIBRARY_LIB%\gmock-mdd.lib exit 1       # [win]
         - if not exist %LIBRARY_LIB%\gmock_main-md.lib exit 1   # [win]
         - if not exist %LIBRARY_LIB%\gmock_main-mdd.lib exit 1  # [win]
-        - if not exist %LIBRARY_BIN%\gmock_dll-md.dll exit 1    # [win]
-        - if not exist %LIBRARY_BIN%\gmock_dll-mdd.dll exit 1   # [win]
-        - if not exist %LIBRARY_LIB%\gmock_dll-md.lib exit 1    # [win]
-        - if not exist %LIBRARY_LIB%\gmock_dll-mdd.lib exit 1   # [win]
+        - if not exist %LIBRARY_BIN%\gmock-md.dll exit 1        # [win]
+        - if not exist %LIBRARY_BIN%\gmock-mdd.dll exit 1       # [win]
+        - if not exist %LIBRARY_LIB%\gmockd-md.lib exit 1       # [win]
+        - if not exist %LIBRARY_LIB%\gmockd-mdd.lib exit 1      # [win]
         - if not exist %LIBRARY_INC%\gmock exit 1               # [win]
 
 about:
