--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -10,14 +10,8 @@ jobs:
   strategy:
     maxParallel: 8
     matrix:
-      linux_python2.7:
-        CONFIG: linux_python2.7
-        UPLOAD_PACKAGES: False
-      linux_python3.6:
-        CONFIG: linux_python3.6
-        UPLOAD_PACKAGES: False
-      linux_python3.7:
-        CONFIG: linux_python3.7
+      linux_:
+        CONFIG: linux_
         UPLOAD_PACKAGES: False
   steps:
   - script: |
@@ -28,7 +22,7 @@ jobs:
   # configure qemu binfmt-misc running.  This allows us to run docker containers 
   # embedded qemu-static
   - script: |
-      docker run --rm --privileged multiarch/qemu-user-static:register
+      docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
       ls /proc/sys/fs/binfmt_misc/
     condition: not(startsWith(variables['CONFIG'], 'linux_64'))
     displayName: Configure binfmt_misc
