--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -10,16 +10,12 @@ jobs:
   strategy:
     maxParallel: 4
     matrix:
-      win_cxx_compilervs2008python3.7:
-        CONFIG: win_cxx_compilervs2008python3.7
+      win_cxx_compilervs2008:
+        CONFIG: win_cxx_compilervs2008
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: False
-      win_cxx_compilervs2015python2.7:
-        CONFIG: win_cxx_compilervs2015python2.7
-        CONDA_BLD_PATH: D:\\bld\\
-        UPLOAD_PACKAGES: False
-      win_cxx_compilervs2015python3.6:
-        CONFIG: win_cxx_compilervs2015python3.6
+      win_cxx_compilervs2015:
+        CONFIG: win_cxx_compilervs2015
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: False
   steps:
