remove static libs

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 2
+  number: 3
   skip: true  # [win and vc<14]
 
 requirements:
@@ -38,8 +38,8 @@ outputs:
       -  Library\include\gtest                                  # [win]
     test:
       commands:
-        - test -f ${PREFIX}/lib/libgtest.a                      # [unix]
-        - test -f ${PREFIX}/lib/libgtest_main.a                 # [unix]
+        - test ! -f ${PREFIX}/lib/libgtest.a                      # [unix]
+        - test ! -f ${PREFIX}/lib/libgtest_main.a                 # [unix]
         - test -f ${PREFIX}/lib/libgtest${SHLIB_EXT}            # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gtest.pc              # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gtest_main.pc         # [unix]
@@ -76,8 +76,8 @@ outputs:
       -  Library\include\gmock                                  # [win]
     test:
       commands:
-        - test -f ${PREFIX}/lib/libgmock.a                      # [unix]
-        - test -f ${PREFIX}/lib/libgmock_main.a                 # [unix]
+        - test ! -f ${PREFIX}/lib/libgmock.a                      # [unix]
+        - test ! -f ${PREFIX}/lib/libgmock_main.a                 # [unix]
         - test -f ${PREFIX}/lib/libgmock${SHLIB_EXT}            # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gmock.pc              # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gmock_main.pc         # [unix]
