--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,13 +33,15 @@ outputs:
       -  lib/libgtest*                                          # [unix]
       -  include/gtest                                          # [unix]
       -  lib/pkgconfig/gtest*.pc                                # [unix]
+      -  lib/cmake/GTest                                        # [unix]
       -  Library\bin\gtest*                                     # [win]
       -  Library\lib\gtest*                                     # [win]
       -  Library\include\gtest                                  # [win]
+      -  Library\lib\cmake\GTest                                # [win]
     test:
       commands:
-        - test ! -f ${PREFIX}/lib/libgtest.a                      # [unix]
-        - test ! -f ${PREFIX}/lib/libgtest_main.a                 # [unix]
+        - test ! -f ${PREFIX}/lib/libgtest.a                    # [unix]
+        - test ! -f ${PREFIX}/lib/libgtest_main.a               # [unix]
         - test -f ${PREFIX}/lib/libgtest${SHLIB_EXT}            # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gtest.pc              # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gtest_main.pc         # [unix]
@@ -71,13 +73,15 @@ outputs:
       -  include/gmock                                          # [unix]
       -  lib/libgmock*                                          # [unix]
       -  lib/pkgconfig/gmock*.pc                                # [unix]
+      -  lib/cmake/GTest                                        # [unix]
       -  Library\bin\gmock*                                     # [win]
       -  Library\lib\gmock*                                     # [win]
       -  Library\include\gmock                                  # [win]
+      -  Library\lib\cmake\GTest                                # [win]
     test:
       commands:
-        - test ! -f ${PREFIX}/lib/libgmock.a                      # [unix]
-        - test ! -f ${PREFIX}/lib/libgmock_main.a                 # [unix]
+        - test ! -f ${PREFIX}/lib/libgmock.a                    # [unix]
+        - test ! -f ${PREFIX}/lib/libgmock_main.a               # [unix]
         - test -f ${PREFIX}/lib/libgmock${SHLIB_EXT}            # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gmock.pc              # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gmock_main.pc         # [unix]
