Check for valid code signature

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,6 +39,7 @@ outputs:
         - test ! -f ${PREFIX}/lib/libgtest.a                    # [unix]
         - test ! -f ${PREFIX}/lib/libgtest_main.a               # [unix]
         - test -f ${PREFIX}/lib/libgtest${SHLIB_EXT}            # [unix]
+        - codesign --verify --verbose ${PREFIX}/lib/libgtest${SHLIB_EXT}  # [osx and arm64]
         - test -f ${PREFIX}/lib/pkgconfig/gtest.pc              # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gtest_main.pc         # [unix]
         - test -d ${PREFIX}/include/gtest                       # [unix]
@@ -78,6 +79,7 @@ outputs:
         - test ! -f ${PREFIX}/lib/libgmock.a                    # [unix]
         - test ! -f ${PREFIX}/lib/libgmock_main.a               # [unix]
         - test -f ${PREFIX}/lib/libgmock${SHLIB_EXT}            # [unix]
+        - codesign --verify --verbose ${PREFIX}/lib/libgmock${SHLIB_EXT}  # [osx and arm64]
         - test -f ${PREFIX}/lib/pkgconfig/gmock.pc              # [unix]
         - test -f ${PREFIX}/lib/pkgconfig/gmock_main.pc         # [unix]
         - test -d ${PREFIX}/include/gmock                       # [unix]
