--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 9dc9157a9a1551ec7a7e43daea9a694a0bb5fb8bec81235d8a1e6ef64c716dcb
 
 build:
-  number: 6
+  number: 7
 
 requirements:
   build:
@@ -73,8 +73,10 @@ outputs:
         - python 3.9
         - cmake
         - ninja
-      run_constrained:
-        - gtest {{ version }}
+      host:
+        - {{ pin_subpackage('gtest', exact=True) }}
+      run:
+        - {{ pin_subpackage('gtest', exact=True) }}
     files:
       -  include/gmock                                          # [unix]
       -  lib/libgmock*                                          # [unix]
