Fix path to LICENSE

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -115,7 +115,7 @@ about:
   home: https://github.com/google/googletest
   license: BSD-3-Clause
   license_family: BSD
-  license_file: googletest/LICENSE
+  license_file: LICENSE
   summary: Google's C++ test framework
 
 extra:
