--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,4 +3,7 @@ conda_forge_output_validation: true
 provider: {linux_aarch64: default, linux_ppc64le: default, win: azure}
 test_on_native_only: true
 azure:
-   store_build_artifacts: true
+  store_build_artifacts: true
+github:
+  branch_name: main
+  tooling_branch_name: main
