make build-scripts output-specific

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,8 @@ requirements:
 
 outputs:
   - name: gtest
+    script: build-gtest.sh   # [unix]
+    script: build-gtest.bat  # [win]
     version: {{ version }}
     requirements:
       build:
