--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -24,6 +24,10 @@ outputs:
     script: build-gtest.sh   # [unix]
     script: build-gtest.bat  # [win]
     version: {{ version }}
+    build:
+      # Builds are linked against the x.x.x version SO.
+      run_exports:
+        - {{ pin_subpackage('gtest', max_pin='x.x.x') }}
     requirements:
       build:
         - {{ compiler('cxx') }}
