--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -12,6 +12,10 @@ jobs:
         CONFIG: win_64_
         UPLOAD_PACKAGES: 'True'
         SHORT_CONFIG: win_64_
+      win_arm64_:
+        CONFIG: win_arm64_
+        UPLOAD_PACKAGES: 'True'
+        SHORT_CONFIG: win_arm64_
   timeoutInMinutes: 360
   variables:
     CONDA_BLD_PATH: D:\\bld\\
